--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ wasmtime-wast = { workspace = true }
 wasmtime-wasi = { workspace = true }
 wasmtime-wasi-crypto = { workspace = true, optional = true }
 wasmtime-wasi-nn = { workspace = true, optional = true }
+wasmtime-wasi-threads = { workspace = true, optional = true }
 clap = { workspace = true, features = ["color", "suggestions", "derive"] }
 anyhow = { workspace = true }
 target-lexicon = { workspace = true }
@@ -85,6 +86,7 @@ members = [
   "crates/bench-api",
   "crates/c-api",
   "crates/cli-flags",
+  "crates/wasi-threads",
   "crates/environ/fuzz",
   "crates/jit-icache-coherence",
   "crates/winch",
@@ -120,6 +122,7 @@ wasmtime-wast = { path = "crates/wast", version = "=4.0.0" }
 wasmtime-wasi = { path = "crates/wasi", version = "4.0.0" }
 wasmtime-wasi-crypto = { path = "crates/wasi-crypto", version = "4.0.0" }
 wasmtime-wasi-nn = { path = "crates/wasi-nn", version = "4.0.0" }
+wasmtime-wasi-threads = { path = "crates/wasi-threads", version = "4.0.0" }
 wasmtime-component-util = { path = "crates/component-util", version = "=4.0.0" }
 wasmtime-component-macro = { path = "crates/component-macro", version = "=4.0.0" }
 wasmtime-asm-macros = { path = "crates/asm-macros", version = "=4.0.0" }
@@ -187,6 +190,7 @@ jitdump = ["wasmtime/jitdump"]
 vtune = ["wasmtime/vtune"]
 wasi-crypto = ["dep:wasmtime-wasi-crypto"]
 wasi-nn = ["dep:wasmtime-wasi-nn"]
+wasi-threads = ["dep:wasmtime-wasi-threads"]
 pooling-allocator = ["wasmtime/pooling-allocator", "wasmtime-cli-flags/pooling-allocator"]
 all-arch = ["wasmtime/all-arch"]
 posix-signals-on-macos = ["wasmtime/posix-signals-on-macos"]
