--- a/.gitmodules
+++ b/.gitmodules
@@ -6,10 +6,12 @@
 	url = https://github.com/WebAssembly/wasm-c-api
 [submodule "WASI"]
 	path = crates/wasi-common/WASI
-	url = https://github.com/WebAssembly/WASI
+	url = https://github.com/haraldh/wasi.git
 [submodule "crates/wasi-nn/spec"]
 	path = crates/wasi-nn/spec
 	url = https://github.com/WebAssembly/wasi-nn
 [submodule "crates/wasi-crypto/spec"]
 	path = crates/wasi-crypto/spec
 	url = https://github.com/WebAssembly/wasi-crypto.git
+[submodule "crates/wasi-common/WASI"]
+	url = https://github.com/haraldh/wasi.git
